fixed all of the white space to the right

--- a/complist/static/complist/detail.css
+++ b/complist/static/complist/detail.css
@@ -21,7 +21,8 @@
     margin-top: -129px;
 }
 #c4 {
-    float: right;
+    margin-left: 750px;
+    width: 500px;
 }
 #t4 {
     width: 500px;
